cmake_minimum_required(VERSION 3.16)
project(src)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    add_compile_options(
            -W4
    )
else ()
    add_link_options(
            -fsanitize=address,undefined
    )
    add_compile_options(
            -Wall
            -Wextra
            -fsanitize=address,undefined
            -D_GLIBCXX_DEBUG
            -D_DEBUG
            -O2
    )
endif ()

add_executable(src_BellmanFord BellmanFord.hpp)
set_target_properties(src_BellmanFord PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Combination Combination.hpp)
set_target_properties(src_Combination PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Compress Compress.hpp)
set_target_properties(src_Compress PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_CumulativeSum CumulativeSum.hpp)
set_target_properties(src_CumulativeSum PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Dijkstra Dijkstra.hpp)
set_target_properties(src_Dijkstra PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Edge Edge.hpp)
set_target_properties(src_Edge PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Factorial Factorial.hpp)
set_target_properties(src_Factorial PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_FenwickTree FenwickTree.hpp)
set_target_properties(src_FenwickTree PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_FloydWarshall FloydWarshall.hpp)
set_target_properties(src_FloydWarshall PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_LowestCommonAncestor LowestCommonAncestor.hpp)
set_target_properties(src_LowestCommonAncestor PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Matrix2D Matrix2D.hpp)
set_target_properties(src_Matrix2D PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Modint Modint.hpp)
set_target_properties(src_Modint PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Point2D Point2D.hpp)
set_target_properties(src_Point2D PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Prime Prime.hpp)
set_target_properties(src_Prime PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Random Random.hpp)
set_target_properties(src_Random PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_RectangleSum RectangleSum.hpp)
set_target_properties(src_RectangleSum PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_RollingHash RollingHash.hpp)
set_target_properties(src_RollingHash PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_Timer Timer.hpp)
set_target_properties(src_Timer PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_TopologicalSort TopologicalSort.hpp)
set_target_properties(src_TopologicalSort PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_UnionFind UnionFind.hpp)
set_target_properties(src_UnionFind PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_bisearch bisearch.hpp)
set_target_properties(src_bisearch PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_chmax chmax.hpp)
set_target_properties(src_chmax PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_chmin chmin.hpp)
set_target_properties(src_chmin PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_clz clz.hpp)
set_target_properties(src_clz PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_ctz ctz.hpp)
set_target_properties(src_ctz PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_debug_template debug_template.hpp)
set_target_properties(src_debug_template PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_divisor divisor.hpp)
set_target_properties(src_divisor PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_empty empty.cpp)
add_executable(src_fnv1a fnv1a.hpp)
set_target_properties(src_fnv1a PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_makevec makevec.hpp)
set_target_properties(src_makevec PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_modpow modpow.hpp)
set_target_properties(src_modpow PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_popcount popcount.hpp)
set_target_properties(src_popcount PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_runLength runLength.hpp)
set_target_properties(src_runLength PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_slide_minmax slide_minmax.hpp)
set_target_properties(src_slide_minmax PROPERTIES LINKER_LANGUAGE CXX)
add_executable(src_template template.hpp)
set_target_properties(src_template PROPERTIES LINKER_LANGUAGE CXX)
